feat: 更新依赖与应用版本，调整默认jvm参数